<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="vn.asiantech.internship.note.ui.DetailFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBarDetailNote"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity.toolbar.height.default"
        android:background="@color/colorToolbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail.image.size"
        android:layout_margin="@dimen/feed.layout.padding">

        <ImageView
            android:id="@+id/imgDetailNote"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorGrayLight"
            android:contentDescription="@string/textView_input" />

        <TextView
            android:id="@+id/tvDateTimeAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            tools:text="20 Jun" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/feed.item.padding"
            android:layout_marginStart="@dimen/feed.item.padding"
            android:gravity="center_vertical"
            android:text="@string/textView_title"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtNoteTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity2.layout.padding"
            android:layout_marginStart="@dimen/activity2.layout.padding"
            android:layout_weight="1"
            android:inputType="text"
            android:paddingLeft="@dimen/feed.item.padding"
            android:paddingRight="@dimen/feed.item.padding"
            android:textColor="@color/colorBlack" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/feed.item.padding"
        android:layout_marginStart="@dimen/feed.item.padding"
        android:gravity="center_vertical"
        android:text="@string/textView_content"
        android:textColor="@color/colorBlack"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtNoteContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/feed.item.padding"
        android:layout_marginStart="@dimen/feed.item.padding"
        android:inputType="text"
        android:textColor="@color/colorBlack" />
</LinearLayout>
