<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mnAdd"
        android:icon="@drawable/ic_add_black_36dp"
        android:title="@string/menu_item_add"
        app:showAsAction="always" />
</menu>
