<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mnDelete"
        android:icon="@drawable/ic_delete_forever_black"
        android:title="@string/menu_item_attachFile"
        app:showAsAction="always" />

    <item
        android:id="@+id/mnEdit"
        android:icon="@drawable/ic_border_color_black"
        android:title="@string/menu_item_save"
        app:showAsAction="ifRoom" />
</menu>
