<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuEdit"
        android:icon="@drawable/ic_mode_edit"
        android:title="@string/title.menu.edit_note"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuDelete"
        android:icon="@drawable/ic_delete"
        android:title="@string/title.menu.delete_note"
        app:showAsAction="ifRoom" />
</menu>