<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toolbarEditInformation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/toolbar.edit_information.background">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@mipmap/ic_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/textview.information.layout_marginStart"
        android:text="@string/textview.information.text"
        android:textColor="@color/colorEditInformation"
        android:textSize="@dimen/textview.editInformation.textSize" />

    <ImageView
        android:id="@+id/imgDeleteNote"
        android:layout_marginStart="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_delete"
        android:contentDescription="@null" />

    <ImageView
        android:id="@+id/imgEditNote"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_edit_note"
        android:contentDescription="@null" />
</android.support.v7.widget.Toolbar>
