...
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_information_note" />

    <EditText
        android:id="@+id/edtTitleInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layout_marginStart="@dimen/textview.title_infor.layout_mảginStart"
        android:layout_marginTop="@dimen/textview.time_infor_note.layout_marginTop"
        android:inputType="text"
...
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/textview.border.layout_height"
        android:background="@color/colorItem" />

    <EditText
        android:id="@+id/edtDescriptionInforNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/imageview.imge_infor_note.layout_marginTop"
        android:inputType="text"
...
